# ACS

./: README.md
ACS_task_5/: CMakeLists.txt  README.md  main.cpp
task 1/: CMakeLists.txt  complex.cpp  complex.h  container.cpp  container.h  fraction.cpp  fraction.h  main.cpp  number.cpp  number.h  polar.cpp  polar.h  rnd.h  Пояснительная записка Ульяненков Ярослав БПИ204.docx
task 1/in/: test0.txt  test5.txt  test6.txt  test9.txt
task2/: CMakeLists.txt  complex.cpp  complex.h  container.cpp  container.h  fraction.cpp  fraction.h  generate_tests.py  main.cpp  number.cpp  number.h  polar.cpp  polar.h  runTests.sh  ~$яснительная записка Ульяненков Ярослав БПИ204.docx  Пояснительная записка Ульяненков Ярослав БПИ204.docx
task2/in/: test4.txt
task3/: .gitignore  container.py  main.py  run_tests.sh  Пояснительная записка Ульяненков Ярослав БПИ204.docx
task3/in/: test1.txt  test2.txt  test3.txt  test7.txt  test8.txt
task3/numbers/: __init__.py  complex.py  fraction.py  number.py  polar.py
